force-app/main/default/objects/ProductDispatch__c/ProductDispatch__c.object-meta.xml
<CustomObject>
    <description>Junction Object</description>
    <label>Product Dispatch Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductDispatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>