force-app/main/default/objects/ProductDispatch__c/fields/Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Dispatch__c</fullName>
    <label>Dispatch</label>
    <referenceTo>Dispatch__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>